--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <header>
         <nav>
             <p><a href="#">WEBSTUDIO</a></p>
@@ -49,26 +50,26 @@
         <section class="Pictures">
             <h2>What are we doing</h2>
             <ul>
-                <li><img src=".\images\PC.jpg" alt="Computer Monitor" width="360px" /></li>
-                <li><img src=".\images\Phone.jpg" alt="Phone Screen" width="360px" /></li>
-                <li><img src=".\images\Phone2.jpg" alt="Cellphone" width="360px" /></li>
+                <li><img src="./images/PC.jpg" alt="Computer Monitor" width="360px"/></li>
+                <li><img src="./images/Phone.jpg" alt="Phone Screen" width="360px"/></li>
+                <li><img src="./images/Phone2.jpg" alt="Cellphone" width="360px"/></li>
             </ul>
 
             <h2>Our Team</h2>
             <ul>
-                <li><img src=".\images\Mark Guerrero.jpg" alt="Profile picture" width="264px"/>
+                <li><img src="./images/Mark Guerrero.jpg" alt="Profile picture" width="264px"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p></li>
 
-                <li><img src=".\images\Tom Ford.jpg" alt="Profile picture" width="264px"/>
+                <li><img src="./images/Tom Ford.jpg" alt="Profile picture" width="264px"/>
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p></li>
 
-                <li><img src=".\images\Camila Garcia.jpg" alt="Profile picture" width="264px"/>
+                <li><img src="./images/Camila Garcia.jpg" alt="Profile picture" width="264px"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p></li>
 
-                <li><img src=".\images\Daniel Wilson.jpg" alt="Profile picture" width="264px"/>
+                <li><img src="./images/Daniel Wilson.jpg" alt="Profile picture" width="264px"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p></li>
             </ul>
@@ -82,5 +83,5 @@
       <br>marketing & growth solutions.<br>
     </p>
   </footer>
-</body>
+  </body>
 </html>
