--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width", initial-scale="1.0" />
         <link rel="stylesheet" href="style.css" />
@@ -51,22 +50,22 @@
             <section class="Pictures">
                 <h2>What are we doing</h2>
                 <ul>
-                    <li><img src="./images/PC.jpg" alt="Computer Monitor" width="360px"/></li>
-                    <li><img src="./images/Phone.jpg" alt="Phone Screen" width="360px"/></li>
-                    <li><img src="./images/Phone2.jpg" alt="Cellphone" width="360px"/></li>
+                    <li><img src="./images/PC.jpg" alt="Computer Monitor" width="360"/></li>
+                    <li><img src="./images/Phone.jpg" alt="Phone Screen" width="360"/></li>
+                    <li><img src="./images/Phone2.jpg" alt="Cellphone" width="360"/></li>
                 </ul>
                 <h2>Our Team</h2>
                 <ul>
-                    <li><img src="./images/Mark Guerrero.jpg" alt="Profile picture" width="264px"/>
+                    <li><img src="./images/Mark Guerrero.jpg" alt="Profile picture" width="264"/>
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p></li>
-                    <li><img src="./images/Tom Ford.jpg" alt="Profile picture" width="264px"/>
+                    <li><img src="./images/Tom Ford.jpg" alt="Profile picture" width="264"/>
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p></li>
-                    <li><img src="./images/Camila Garcia.jpg" alt="Profile picture" width="264px"/>
+                    <li><img src="./images/Camila Garcia.jpg" alt="Profile picture" width="264"/>
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p></li>
-                    <li><img src="./images/Daniel Wilson.jpg" alt="Profile picture" width="264px"/>
+                    <li><img src="./images/Daniel Wilson.jpg" alt="Profile picture" width="264"/>
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p></li>
                 </ul>
